--- a/src/css/input.css
+++ b/src/css/input.css
@@ -180,3 +180,59 @@ p {
   /* height: 30vh; */
   max-height: 30vh;
 }
+
+
+.switch {
+  position: relative;
+  display: inline-block;
+  width: 60px;
+  height: 34px;
+}
+
+
+.switch input {
+  opacity: 0;
+  width: 0;
+  height: 0;
+}
+
+
+.light-dark-slider {
+  position: absolute;
+  cursor: pointer;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background-color: #ccc;
+  transition: .4s;
+  border-radius: 34px;
+}
+
+.light-dark-slider > div {
+  position: absolute;
+  top: 4px;
+  bottom: 4px;
+  width: 26px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  transition: .4s;
+  border-radius: 50%;
+}
+
+#icon-container {
+  left: 4px;
+  transition: left 0.4s ease-in-out; 
+}
+
+input:checked + .light-dark-slider {
+  background-color: #1c1636;
+}
+
+
+input:checked + .light-dark-slider > #icon-container {
+  left: calc(100% - 30px); 
+}
+
+
