--- a/src/css/input.css
+++ b/src/css/input.css
@@ -114,7 +114,10 @@ p {
 }
 
 .cardHover:hover {
-  background-color: rgb(37, 37, 77);
+  background-color: #25254d;
+}
+.dark .cardHover:hover {
+  background-color: #36368f;
 }
 
 #projects-section > div {
@@ -228,3 +231,51 @@ input:checked + .light-dark-slider {
 input:checked + .light-dark-slider > #icon-container {
   left: calc(100% - 30px);
 }
+
+
+.container {
+  position: relative;
+  width: 200px;
+  height: 200px;
+}
+
+.object {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: #333;
+}
+
+.snap-button {
+ 
+  transform: translateX(-50%);
+  padding: 10px 20px;
+  background-color: #4CAF50;
+  color: white;
+  border: none;
+  cursor: pointer;
+  border-radius: 5px;
+  font-size: 16px;
+}
+
+.particle {
+  position: absolute;
+  width: 5px;
+  height: 5px;
+  background-color: #ddd;
+  border-radius: 50%;
+  animation: disintegrate 1s ease-out both;
+}
+
+@keyframes disintegrate {
+  0% {
+      opacity: 1;
+  }
+  100% {
+      opacity: 0;
+      transform: translateX(calc(-50% + random(0, 100vw))) translateY(calc(-50% + random(0, 100vh))) scale(0.5);
+  }
+}
+
